--- a/PlaygroundBook/PrivateResources/Base.lproj/LiveView.storyboard
+++ b/PlaygroundBook/PrivateResources/Base.lproj/LiveView.storyboard
@@ -20,43 +20,36 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background3x.png" translatesAutoresizingMaskIntoConstraints="NO" id="SR1-fE-QRc">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Meet My Passions" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJA-YJ-jGc">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Meet My Passions" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJA-YJ-jGc">
                                 <rect key="frame" x="124" y="298" width="126" height="70"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="midfield.png" translatesAutoresizingMaskIntoConstraints="NO" id="efd-ez-HHO">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="midfield.png" translatesAutoresizingMaskIntoConstraints="NO" id="efd-ez-HHO" userLabel="midfield">
                                 <rect key="frame" x="122" y="268" width="131" height="131"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="border.png" translatesAutoresizingMaskIntoConstraints="NO" id="zTE-g9-YDu">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="border.png" translatesAutoresizingMaskIntoConstraints="NO" id="zTE-g9-YDu">
                                 <rect key="frame" x="104" y="245" width="166" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="efd-ez-HHO" firstAttribute="top" secondItem="B64-C2-Nkt" secondAttribute="top" constant="248" id="0jR-Gc-qwp"/>
-                            <constraint firstItem="zTE-g9-YDu" firstAttribute="centerX" secondItem="efd-ez-HHO" secondAttribute="centerX" id="5Kd-4l-ZAb"/>
                             <constraint firstAttribute="trailing" secondItem="SR1-fE-QRc" secondAttribute="trailing" id="Aig-T6-g2d"/>
-                            <constraint firstItem="zTE-g9-YDu" firstAttribute="centerY" secondItem="efd-ez-HHO" secondAttribute="centerY" id="CIc-Ee-emz"/>
-                            <constraint firstItem="SR1-fE-QRc" firstAttribute="centerY" secondItem="efd-ez-HHO" secondAttribute="centerY" id="Fks-Rk-Wim"/>
-                            <constraint firstItem="mJA-YJ-jGc" firstAttribute="leading" secondItem="B64-C2-Nkt" secondAttribute="leading" constant="124" id="H22-4x-3I1"/>
-                            <constraint firstItem="zTE-g9-YDu" firstAttribute="top" secondItem="B64-C2-Nkt" secondAttribute="top" constant="225" id="JQk-1Z-236"/>
-                            <constraint firstItem="SR1-fE-QRc" firstAttribute="centerX" secondItem="efd-ez-HHO" secondAttribute="centerX" id="LuC-kU-o72"/>
                             <constraint firstItem="SR1-fE-QRc" firstAttribute="leading" secondItem="Clq-Vx-PDB" secondAttribute="leading" id="XmU-9z-3YP"/>
-                            <constraint firstItem="zTE-g9-YDu" firstAttribute="leading" secondItem="B64-C2-Nkt" secondAttribute="leading" constant="104" id="Yl1-9b-AuT"/>
-                            <constraint firstItem="efd-ez-HHO" firstAttribute="leading" secondItem="B64-C2-Nkt" secondAttribute="leading" constant="122" id="iAM-3V-vYW"/>
                             <constraint firstItem="SR1-fE-QRc" firstAttribute="bottom" secondItem="B64-C2-Nkt" secondAttribute="bottom" id="iOK-GG-TcK"/>
-                            <constraint firstItem="efd-ez-HHO" firstAttribute="centerY" secondItem="mJA-YJ-jGc" secondAttribute="centerY" id="oVu-YM-dSi"/>
                             <constraint firstItem="SR1-fE-QRc" firstAttribute="top" secondItem="Clq-Vx-PDB" secondAttribute="top" id="tMh-ta-aP0"/>
-                            <constraint firstItem="mJA-YJ-jGc" firstAttribute="top" secondItem="B64-C2-Nkt" secondAttribute="top" constant="278" id="xh6-yt-5by"/>
-                            <constraint firstItem="efd-ez-HHO" firstAttribute="centerX" secondItem="mJA-YJ-jGc" secondAttribute="centerX" id="yHi-V0-aCI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="B64-C2-Nkt"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="border" destination="zTE-g9-YDu" id="p9G-8S-NI4"/>
+                        <outlet property="midfield" destination="efd-ez-HHO" id="hMn-lv-i8k"/>
+                        <outlet property="passionsLabel" destination="mJA-YJ-jGc" id="R3w-26-MpV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EUr-pV-bFa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -70,15 +63,6 @@
                     <view key="view" contentMode="scaleToFill" id="j9U-yS-Ff6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Testee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAu-k6-CF9">
-                                <rect key="frame" x="162" y="312" width="51" height="42"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="75g-0j-xCk"/>
                     </view>
@@ -94,15 +78,6 @@
                     <view key="view" contentMode="scaleToFill" id="1wV-Te-gkl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Testee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRB-MO-0rG">
-                                <rect key="frame" x="162" y="270" width="51" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="agR-Mu-Qiu"/>
                     </view>
